--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-gunicorn
-fastapi
-uvicorn[standard]
-numpy
-opencv-python-headless
-onnxruntime
-
+fastapi==0.95.1
+uvicorn==0.22.0
+numpy==1.24.3
+opencv-python-headless==4.8.0.74
+onnxruntime==1.15.0
